--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -32,7 +32,7 @@ body, html, #root, .App {
   align-items: center;
   text-align: center;
   padding: 20px;
-  margin-top: 60px;
+  padding-top: 60px;
 }
 
 .gameCard {
