--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -13,46 +13,49 @@ body, html, #root, .App {
   box-sizing: inherit;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  position: relative;
+}
+
 .navbar {
   background-color: #d32f2f;
   display: flex;
   justify-content: space-between;
-  padding: 10px;
-  height: 60px;
   box-sizing: border-box;
 }
 
 .sidenav {
   width: 20%;
   background: #fff;
-  position: fixed;
-  top: 60px;
-  margin-bottom: 70px;
+  position: absolute;
   left: 10%;
   overflow-x: hidden;
-  padding-top: 10px;
   transition: width 0.3s ease;
 }
 
 .betPreview {
   width: 20%;
   background: #fff;
-  position: fixed;
-  top: 60px;
-  margin-bottom: 70px;
+  position: absolute;
   right: 10%;
   overflow-x: hidden;
-  padding-top: 10px;
   transition: width 0.3s ease;
+  height: 80%
+}
+
+.betPreviewBody {
+  flex-grow: 1;
+  overflow-y: auto;
 }
 
 .gameList {
   flex: 1;
-  position: relative;
+  position: absolute;
   margin-left: 30%;
   margin-right: 30%;
-  top: 60px;
-  margin-bottom: 70px;
   box-sizing: border-box;
 }
 
@@ -60,8 +63,8 @@ body, html, #root, .App {
   background-color: #f5f5f5;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  margin: 10px;
-  padding: 20px;
+  margin: 1rem;
+  padding: 2rem;
   box-sizing: border-box;
 }
 
@@ -76,22 +79,38 @@ body, html, #root, .App {
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 14px;
-  width: 100px;
+  font-size: 0.875rem;
+  width: 6.25rem;
 }
 
 .oddsButton p {
   margin-bottom: 0;
 }
 
-footer {
+.footer {
   background-color: #d32f2f;
   color: white;
-  padding: 10px;
+  padding: 1rem;
   text-align: center;
   width: 100%;
-  height: 60px;
+  height: 4rem;
   box-sizing: border-box;
+  margin-top: auto;
+}
+
+.bet-checkout {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.bets-info {
+  flex: 1;
+  margin-right: 1.25rem;
+}
+
+.checkout-form {
+  flex: 1;
 }
 
 @media (max-width: 1200px) {
