--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -7,6 +7,13 @@ body, html, #root, .App {
   box-sizing: border-box;
 }
 
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 *,
 *::before,
 *::after {
@@ -16,8 +23,9 @@ body, html, #root, .App {
 .container {
   display: flex;
   flex-direction: column;
-  flex: 1;
   position: relative;
+  height: 100vh;
+  overflow-y: auto;
 }
 
 .navbar {
@@ -101,13 +109,19 @@ body, html, #root, .App {
 .bet-checkout {
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  height: 100%;
+  overflow-y: hidden;
 }
 
 .bets-info {
   flex: 1;
   margin-right: 1.25rem;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+  max-height: 100%;
 }
+
 
 .checkout-form {
   flex: 1;
