--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -39,16 +39,16 @@ html, body {
   width: 20%;
   background: #fff;
   position: absolute;
-  left: 10%;
+  left: 0;
   overflow-x: hidden;
   transition: width 0.3s ease;
 }
 
 .betPreview {
-  width: 20%;
+  width: 40%;
   background: #fff;
   position: absolute;
-  right: 10%;
+  right: 0;
   overflow-x: hidden;
   transition: width 0.3s ease;
   height: 80%
@@ -62,7 +62,7 @@ html, body {
 .gameList {
   flex: 1;
   position: absolute;
-  margin-left: 30%;
+  margin-left: 20%;
   margin-right: 30%;
   box-sizing: border-box;
 }
